kubernetes/dev/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: default
spec:
  basicAuth:
    secret: authsecret
