kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
spec:
  ports:
    - port: 8070
  selector:
    app: ${APP_NAME}
